# workSpace

./: README.md
agent/: .env  .gitignore  pyproject.toml
agent/LangChain入门/: 2_1_helloworld.ipynb
agent/notebook自动化编写/: .env  continue_novel.py  continue_writing.py  create_outline.py  generate_ch10.py  generate_ch10_only.py  generate_ch13_15.py  generate_ch14.py  generate_ch14_system.py  generate_ch15_17.py  generate_ch15_single.py  generate_ch16_20.py  generate_ch18_20.py  generate_ch5.py  generate_ch6.py  generate_ch7_10.py  generate_chapter_by_outline.py  generate_chapters.py  generate_chapters_6-10.py  generate_missing.py  generate_missing_chapters.py  generate_multiple.py  novel_agent.py  novel_generator.py  novel_generator_demo.ipynb  requirements.txt  rewrite_ch1_5.py  simple_run.py
agent/notebook自动化编写/novels/工作摸鱼，竟穿越回修仙世界/: metadata.txt  volumes.json  卷1_outline.txt  小说思维导图.txt  第10章_炼气二层.txt  第11章_意外来客.txt  第12章_柳鸣突破.txt  第13章_王执事的怀疑.txt  第14章_粪坑下的发现.txt  第15章_坊市之行.txt  第16章_炼气三层.txt  第17章_外门弟子的心思.txt  第18章_柳鸣的劝告.txt  第19章_王执事的算盘.txt  第1章_加班猝死.txt  第2章_清风门杂役.txt  第3章_摸鱼系统.txt  第4章_王执事的鞭子.txt  第5章_炼气一层.txt  第6章_洗衣房的规律.txt  第7章_灵石碎片.txt  第8章_柳鸣的秘密.txt  第9章_矿洞灵光.txt
agent/notebook自动化编写/reference/: 仙逆_文风参考.txt  修仙小说通用写作规范.txt  凡人修仙传_文风参考.txt  遮天_文风参考.txt
agent/novels/苍穹仙途/: characters.txt  metadata.txt  reference_style.txt  volumes.json  卷1_outline.txt  小说思维导图.txt  第10章_内门生活.txt  第1章_摸鱼穿越.txt  第2章_前往青玄.txt  第3章_测试风云.txt  第4章_采集灵草.txt  第5章_宗门课程.txt  第6章_秘境探险.txt  第7章_宗门大比·初赛.txt  第8章_宗门大比·复赛.txt  第9章_宗门大比·决赛.txt
