[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.28",
    "langchain-deepseek>=0.1.4",
    "notebook>=7.5.5",
    "python-dotenv>=1.2.1",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
